(feat): Client Meta directive

--- a/src/app/common/components/featured-content/featured-content.component.html
+++ b/src/app/common/components/featured-content/featured-content.component.html
@@ -1,5 +1,8 @@
 <div *ngIf="entity">
-  <ng-container *ngIf="entity?.type === 'activity'">
+  <ng-container
+    *ngIf="entity?.type === 'activity'"
+    [clientMeta]="{ medium: 'featured-content' }"
+  >
     <ng-template dynamic-host></ng-template>
   </ng-container>
 </div>
