--- a/src/app/modules/blogs/view/view.html
+++ b/src/app/modules/blogs/view/view.html
@@ -1,184 +1,191 @@
-<div class="m--spam-notice mdl-shadow--8dp" *ngIf="blog?.spam || blog?.deleted">
-  <ng-container *ngIf="blog?.spam" i18n="@@BLOGS__VIEW__FLAGGED_AS_SPAM"
-    >This blog was flagged as spam.</ng-container
-  >
-  <ng-container *ngIf="blog?.deleted" i18n="@@BLOGS__VIEW__FLAGGED_AS_DELETED"
-    >This blog was flagged as deleted.</ng-container
-  >
-
-  <ng-container *ngIf="!session.isAdmin()" i18n="@@M__ACTION__APPEAL_MARK">
-    If you wish to appeal, please check your
-    <a routerLink="/settings/reported-content">Reported Content console</a>.
-  </ng-container>
-</div>
-
-<header
-  *ngIf="blog"
-  [ngClass]="{ 'm-mature-content': attachment.shouldBeBlurred(blog), 'm-mature-content-shown': attachment.isForcefullyShown(blog) }"
->
+<ng-container [clientMeta]="{ source: 'single', medium: 'single' }">
   <div
-    class="m-mature-overlay"
-    (click)="blog.mature_visibility = !blog.mature_visibility"
+    class="m--spam-notice mdl-shadow--8dp"
+    *ngIf="blog?.spam || blog?.deleted"
   >
-    <span class="m-mature-overlay-note">
-      <i
-        class="material-icons"
-        title="Mature content"
-        i18n-title="@@M__COMMON__MATURE_CONTENT"
-        >explicit</i
-      >
-      <span i18n="@@M__COMMON__CONFIRM_18">Click to confirm you are 18+</span>
-    </span>
-  </div>
-  <minds-banner
-    [src]="blog.thumbnail_src"
-    [object]="blog"
-    *ngIf="blog.header_bg"
-  ></minds-banner>
-</header>
-
-<div
-  class="mdl-grid m-blog-container blogs-grid"
-  style="max-width:740px"
-  *ngIf="blog.guid"
->
-  <ng-container *ngIf="false">
-    <google-ad
-      *ngIf="!session.getLoggedInUser().plus && blog.monetized && index == 0"
-      type="responsive"
-      location="top"
-    ></google-ad>
-  </ng-container>
-
-  <div class="mdl-grid" style="width:100%">
-    <div class="mdl-cell mdl-cell--12-col">
-      <h1 class="m-blog--title">{{blog.title}}</h1>
-    </div>
-
-    <!-- Owner box -->
-    <div class="mdl-cell mdl-cell--5-col minds-blog-ownerblock">
-      <div class="minds-avatar" [hovercard]="blog.ownerObj.guid">
-        <a [routerLink]="['/', blog.ownerObj.username]">
-          <img
-            src="{{cdnUrl}}icon/{{blog.ownerObj.guid}}/small/{{blog.ownerObj.icontime}}"
-            class="mdl-shadow--2dp"
-          />
-        </a>
-      </div>
-      <div class="minds-body">
-        <a [routerLink]="['/', blog.ownerObj.username]"
-          >{{blog.ownerObj.name}}</a
-        >
-        <span *ngIf="blog.time_published || blog.time_created"
-          >{{ (blog.time_published ? blog.time_published : blog.time_created) *
-          1000 | date: 'medium'}}</span
-        >
-      </div>
-    </div>
-    <div class="mdl-cell mdl-cell--7-col m-actions-block" *ngIf="showActions">
-      <div class="mdl-layout-spacer"></div>
-      <m-post-menu
-        [entity]="blog"
-        [user]="blog.ownerObj"
-        [askForCategoriesWhenFeaturing]="true"
-        [canDelete]="blog.ownerObj.guid == session.getLoggedInUser().guid || session.isAdmin()"
-        [options]="menuOptions"
-        (optionSelected)="menuOptionSelected($event)"
-      ></m-post-menu>
-      <minds-button-remind [object]="blog"></minds-button-remind>
-      <minds-button-thumbs-up [object]="blog"></minds-button-thumbs-up>
-      <minds-button-thumbs-down [object]="blog"></minds-button-thumbs-down>
-    </div>
-  </div>
-
-  <div style="width:100%; padding:8px; position:relative;">
-    <div
-      class="mdl-cell mdl-cell--12-col minds-blog-body"
-      [innerHtml]="blog.description | safe"
-      [ngClass]="{ 'm-mature-text': attachment.shouldBeBlurred(blog) }"
-      [hidden]="!blog.description"
-    ></div>
-  </div>
-
-  <!-- Additional block -->
-  <div
-    class="m-blog--footer mdl-cell mdl-cell--12-col m-additional-block mdl-color-text--blue-grey-200"
-  >
-    <div class="m-license-info">
-      <i class="material-icons">public</i>
-      <span [hidden]="!blog.license">{{blog.license}}</span>
-      <span
-        [hidden]="blog.license"
-        i18n="@@M__COMMON__LICENSE_ALL_RIGHT_RESERVED"
-        >All Rights Reserved</span
-      >
-    </div>
-    <div
-      class="m-visibility-info"
-      *ngIf="blog.ownerObj.guid == session.getLoggedInUser().guid || session.isAdmin()"
+    <ng-container *ngIf="blog?.spam" i18n="@@BLOGS__VIEW__FLAGGED_AS_SPAM"
+      >This blog was flagged as spam.</ng-container
     >
-      <i class="material-icons">visibility</i>
-      <span [hidden]="blog.access_id != 2" i18n="@@M__COMMON__VISIBILITY_PUBLIC"
-        >Public</span
-      >
-      <span
-        [hidden]="blog.access_id != 0"
-        i18n="@@M__COMMON__VISIBILITY_UNLISTED"
-        >Unlisted</span
-      >
+    <ng-container *ngIf="blog?.deleted" i18n="@@BLOGS__VIEW__FLAGGED_AS_DELETED"
+      >This blog was flagged as deleted.</ng-container
+    >
+
+    <ng-container *ngIf="!session.isAdmin()" i18n="@@M__ACTION__APPEAL_MARK">
+      If you wish to appeal, please check your
+      <a routerLink="/settings/reported-content">Reported Content console</a>.
+    </ng-container>
+  </div>
+
+  <header
+    *ngIf="blog"
+    [ngClass]="{ 'm-mature-content': attachment.shouldBeBlurred(blog), 'm-mature-content-shown': attachment.isForcefullyShown(blog) }"
+  >
+    <div
+      class="m-mature-overlay"
+      (click)="blog.mature_visibility = !blog.mature_visibility"
+    >
+      <span class="m-mature-overlay-note">
+        <i
+          class="material-icons"
+          title="Mature content"
+          i18n-title="@@M__COMMON__MATURE_CONTENT"
+          >explicit</i
+        >
+        <span i18n="@@M__COMMON__CONFIRM_18">Click to confirm you are 18+</span>
+      </span>
     </div>
-    <div class="m-share-buttons" (click)="openShareModal()">
-      <i class="material-icons">share</i>
-      <span i18n="@@BLOGS__VIEW__SHARE">SHARE</span>
-    </div>
-    <minds-button-boost
+    <minds-banner
+      [src]="blog.thumbnail_src"
       [object]="blog"
-      *ngIf="session.isLoggedIn() && !isScheduled(blog.time_created)"
-    ></minds-button-boost>
-  </div>
-</div>
+      *ngIf="blog.header_bg"
+    ></minds-banner>
+  </header>
 
-<m-wire--lock-screen
-  [(entity)]="blog"
-  *ngIf="blog.paywall"
-  #lockScreen
-></m-wire--lock-screen>
-
-<ng-container *mIfBrowser>
   <div
-    class="mdl-grid blogs-grid"
-    style="max-width:660px"
-    *ngIf="showComments && blog.guid"
+    class="mdl-grid m-blog-container blogs-grid"
+    style="max-width:740px"
+    *ngIf="blog.guid"
   >
-    <m-comments__tree [entity]="blog"> </m-comments__tree>
+    <ng-container *ngIf="false">
+      <google-ad
+        *ngIf="!session.getLoggedInUser().plus && blog.monetized && index == 0"
+        type="responsive"
+        location="top"
+      ></google-ad>
+    </ng-container>
+
+    <div class="mdl-grid" style="width:100%">
+      <div class="mdl-cell mdl-cell--12-col">
+        <h1 class="m-blog--title">{{blog.title}}</h1>
+      </div>
+
+      <!-- Owner box -->
+      <div class="mdl-cell mdl-cell--5-col minds-blog-ownerblock">
+        <div class="minds-avatar" [hovercard]="blog.ownerObj.guid">
+          <a [routerLink]="['/', blog.ownerObj.username]">
+            <img
+              src="{{cdnUrl}}icon/{{blog.ownerObj.guid}}/small/{{blog.ownerObj.icontime}}"
+              class="mdl-shadow--2dp"
+            />
+          </a>
+        </div>
+        <div class="minds-body">
+          <a [routerLink]="['/', blog.ownerObj.username]"
+            >{{blog.ownerObj.name}}</a
+          >
+          <span *ngIf="blog.time_published || blog.time_created"
+            >{{ (blog.time_published ? blog.time_published : blog.time_created)
+            * 1000 | date: 'medium'}}</span
+          >
+        </div>
+      </div>
+      <div class="mdl-cell mdl-cell--7-col m-actions-block" *ngIf="showActions">
+        <div class="mdl-layout-spacer"></div>
+        <m-post-menu
+          [entity]="blog"
+          [user]="blog.ownerObj"
+          [askForCategoriesWhenFeaturing]="true"
+          [canDelete]="blog.ownerObj.guid == session.getLoggedInUser().guid || session.isAdmin()"
+          [options]="menuOptions"
+          (optionSelected)="menuOptionSelected($event)"
+        ></m-post-menu>
+        <minds-button-remind [object]="blog"></minds-button-remind>
+        <minds-button-thumbs-up [object]="blog"></minds-button-thumbs-up>
+        <minds-button-thumbs-down [object]="blog"></minds-button-thumbs-down>
+      </div>
+    </div>
+
+    <div style="width:100%; padding:8px; position:relative;">
+      <div
+        class="mdl-cell mdl-cell--12-col minds-blog-body"
+        [innerHtml]="blog.description | safe"
+        [ngClass]="{ 'm-mature-text': attachment.shouldBeBlurred(blog) }"
+        [hidden]="!blog.description"
+      ></div>
+    </div>
+
+    <!-- Additional block -->
+    <div
+      class="m-blog--footer mdl-cell mdl-cell--12-col m-additional-block mdl-color-text--blue-grey-200"
+    >
+      <div class="m-license-info">
+        <i class="material-icons">public</i>
+        <span [hidden]="!blog.license">{{blog.license}}</span>
+        <span
+          [hidden]="blog.license"
+          i18n="@@M__COMMON__LICENSE_ALL_RIGHT_RESERVED"
+          >All Rights Reserved</span
+        >
+      </div>
+      <div
+        class="m-visibility-info"
+        *ngIf="blog.ownerObj.guid == session.getLoggedInUser().guid || session.isAdmin()"
+      >
+        <i class="material-icons">visibility</i>
+        <span
+          [hidden]="blog.access_id != 2"
+          i18n="@@M__COMMON__VISIBILITY_PUBLIC"
+          >Public</span
+        >
+        <span
+          [hidden]="blog.access_id != 0"
+          i18n="@@M__COMMON__VISIBILITY_UNLISTED"
+          >Unlisted</span
+        >
+      </div>
+      <div class="m-share-buttons" (click)="openShareModal()">
+        <i class="material-icons">share</i>
+        <span i18n="@@BLOGS__VIEW__SHARE">SHARE</span>
+      </div>
+      <minds-button-boost
+        [object]="blog"
+        *ngIf="session.isLoggedIn() && !isScheduled(blog.time_created)"
+      ></minds-button-boost>
+    </div>
   </div>
+
+  <m-wire--lock-screen
+    [(entity)]="blog"
+    *ngIf="blog.paywall"
+    #lockScreen
+  ></m-wire--lock-screen>
+
+  <ng-container *mIfBrowser>
+    <div
+      class="mdl-grid blogs-grid"
+      style="max-width:660px"
+      *ngIf="showComments && blog.guid"
+    >
+      <m-comments__tree [entity]="blog"> </m-comments__tree>
+    </div>
+  </ng-container>
+
+  <m-social-icons
+    [url]="blog.perma_url"
+    [title]="blog.title"
+    *ngIf="!session.getLoggedInUser().hide_share_buttons"
+  >
+  </m-social-icons>
+
+  <m-modal-confirm
+    *ngIf="deleteToggle"
+    [open]="true"
+    [closeAfterAction]="true"
+    (closed)="deleteToggle = false"
+    (actioned)="delete()"
+    yesButton="Delete permanently"
+    i18n-yesButton="@@M__COMMON__DELETE_PERMANENTLY"
+  >
+    <p confirm-message>
+      <ng-container i18n="@@BLOGS__VIEW__CONFIRM_DELETION"
+        >Are you sure you want to delete this blog?<br /><br />There's no
+        UNDO!</ng-container
+      >
+    </p>
+    <p confirm-success-message>
+      <ng-container i18n="@@BLOGS__VIEW__DELETION_CONFIRMATION"
+        >The blog has been deleted.</ng-container
+      >
+    </p>
+  </m-modal-confirm>
 </ng-container>
-
-<m-social-icons
-  [url]="blog.perma_url"
-  [title]="blog.title"
-  *ngIf="!session.getLoggedInUser().hide_share_buttons"
->
-</m-social-icons>
-
-<m-modal-confirm
-  *ngIf="deleteToggle"
-  [open]="true"
-  [closeAfterAction]="true"
-  (closed)="deleteToggle = false"
-  (actioned)="delete()"
-  yesButton="Delete permanently"
-  i18n-yesButton="@@M__COMMON__DELETE_PERMANENTLY"
->
-  <p confirm-message>
-    <ng-container i18n="@@BLOGS__VIEW__CONFIRM_DELETION"
-      >Are you sure you want to delete this blog?<br /><br />There's no
-      UNDO!</ng-container
-    >
-  </p>
-  <p confirm-success-message>
-    <ng-container i18n="@@BLOGS__VIEW__DELETION_CONFIRMATION"
-      >The blog has been deleted.</ng-container
-    >
-  </p>
-</m-modal-confirm>
