--- a/src/app/modules/channels/feed/feed.html
+++ b/src/app/modules/channels/feed/feed.html
@@ -1,52 +1,54 @@
-<ng-container *mIfFeature="'activity-composer'; else v1NewsfeedPoster">
-  <m-composer
-    *ngIf="session.isLoggedIn() && session.getLoggedInUser().guid == user.guid"
-    (onPost)="prepend($event)"
-    #composer
-  ></m-composer>
-</ng-container>
-<ng-template #v1NewsfeedPoster>
-  <minds-newsfeed-poster
-    (load)="prepend($event)"
-    *ngIf="session.isLoggedIn() && session.getLoggedInUser().guid == user.guid"
-    #poster
-  ></minds-newsfeed-poster>
-</ng-template>
+<ng-container [clientMeta]="{ source: 'feed/channel', medium: 'feed' }">
+  <ng-container *mIfFeature="'activity-composer'; else v1NewsfeedPoster">
+    <m-composer
+      *ngIf="session.isLoggedIn() && session.getLoggedInUser().guid == user.guid"
+      (onPost)="prepend($event)"
+      #composer
+    ></m-composer>
+  </ng-container>
+  <ng-template #v1NewsfeedPoster>
+    <minds-newsfeed-poster
+      (load)="prepend($event)"
+      *ngIf="session.isLoggedIn() && session.getLoggedInUser().guid == user.guid"
+      #poster
+    ></minds-newsfeed-poster>
+  </ng-template>
 
-<div class="minds-list">
-  <m-onboarding-feed
-    *ngIf="session.isLoggedIn() && session.getLoggedInUser().guid == user.guid"
-  ></m-onboarding-feed>
-  <m-newsfeed--boost-rotator
-    [channel]="user"
-    interval="12"
-    *ngIf="user.guid !== session.getLoggedInUser().guid && user.show_boosts"
-  ></m-newsfeed--boost-rotator>
-  <minds-activity
-    *ngFor="let activity of pinned; let i = index"
-    [object]="activity"
-    [boostToggle]="activity.boostToggle"
-    class="mdl-card m-border item"
-    (deleted)="delete($event)"
-    [slot]="i + 1"
-    [attr.data-minds-activity-guid]="activity.guid"
-    [allowAutoplayOnScroll]="true"
-  ></minds-activity>
-  <minds-activity
-    *ngFor="let activity of feed; let i = index"
-    [object]="activity"
-    [boostToggle]="activity.boostToggle"
-    class="mdl-card m-border item"
-    (deleted)="delete($event)"
-    [slot]="i + (pinned?.length || 0) + 1"
-    [attr.data-minds-activity-guid]="activity.guid"
-    [allowAutoplayOnScroll]="true"
-  ></minds-activity>
-  <infinite-scroll
-    distance="25%"
-    (load)="loadFeed()"
-    [moreData]="moreData"
-    [inProgress]="inProgress"
-  >
-  </infinite-scroll>
-</div>
+  <div class="minds-list">
+    <m-onboarding-feed
+      *ngIf="session.isLoggedIn() && session.getLoggedInUser().guid == user.guid"
+    ></m-onboarding-feed>
+    <m-newsfeed--boost-rotator
+      [channel]="user"
+      interval="12"
+      *ngIf="user.guid !== session.getLoggedInUser().guid && user.show_boosts"
+    ></m-newsfeed--boost-rotator>
+    <minds-activity
+      *ngFor="let activity of pinned; let i = index"
+      [object]="activity"
+      [boostToggle]="activity.boostToggle"
+      class="mdl-card m-border item"
+      (deleted)="delete($event)"
+      [slot]="i + 1"
+      [attr.data-minds-activity-guid]="activity.guid"
+      [allowAutoplayOnScroll]="true"
+    ></minds-activity>
+    <minds-activity
+      *ngFor="let activity of feed; let i = index"
+      [object]="activity"
+      [boostToggle]="activity.boostToggle"
+      class="mdl-card m-border item"
+      (deleted)="delete($event)"
+      [slot]="i + (pinned?.length || 0) + 1"
+      [attr.data-minds-activity-guid]="activity.guid"
+      [allowAutoplayOnScroll]="true"
+    ></minds-activity>
+    <infinite-scroll
+      distance="25%"
+      (load)="loadFeed()"
+      [moreData]="moreData"
+      [inProgress]="inProgress"
+    >
+    </infinite-scroll>
+  </div>
+</ng-container>
