(refactor): recordView should use parent's directive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="ready">
+<ng-container clientMeta *ngIf="ready">
   <ng-container *ngIf="!isProDomain">
     <m-topbarwrapper></m-topbarwrapper>
   </ng-container>
