--- a/src/app/modules/channels/channel.component.html
+++ b/src/app/modules/channels/channel.component.html
@@ -1,4 +1,4 @@
-<ng-container [clientMeta]="{ source: 'single', medium: 'single' }">
+<ng-container [clientMeta]="{ source: 'feed/channel', medium: 'feed' }">
   <div class="m--spam-notice" *ngIf="user?.spam">
     <ng-container *ngIf="user?.spam" i18n="@@MINDS__CHANNELS__FLAGGED_AS_SPAM"
       >This user was flagged as spam.</ng-container
