Toggle comments from activity toolbar

--- a/src/app/modules/comments/entity-outlet/entity-outlet.component.html
+++ b/src/app/modules/comments/entity-outlet/entity-outlet.component.html
@@ -1,7 +1,7 @@
 <div
   class="m-commentsEntityOutlet__expand--hide"
   *ngIf="count > 0 && !showOnlyPoster"
-  (click)="showOnlyPoster = true"
+  (click)="closeFullComments()"
 >
   Hide comments
 </div>
