(fix): Angular i18n templates

--- a/src/app/common/components/form-toast/form-toast.component.html
+++ b/src/app/common/components/form-toast/form-toast.component.html
@@ -16,7 +16,7 @@
           <ng-container *ngIf="toast.type === 'warning'">warning</ng-container>
         </i>
       </div>
-      <p i18n>{{ toast.message }}</p>
+      <p>{{ toast.message }}</p>
       <div class="m-formToast__iconWrapper--close">
         <i class="material-icons" (click)="dismiss(i)">clear</i>
       </div>
