--- a/src/app/common/components/marketing/as-featured-in.component.html
+++ b/src/app/common/components/marketing/as-featured-in.component.html
@@ -1,7 +1,7 @@
 <div class="m-grid m-marketing__asFeaturedIn">
-  <div class="m-grid__column-2 m-marketingAsFeaturedIn__title" i18n>
-    <ng-container *ngIf="!inThePress">As featured in</ng-container>
-    <ng-container *ngIf="inThePress">Minds in the press</ng-container>
+  <div class="m-grid__column-2 m-marketingAsFeaturedIn__title">
+    <ng-container *ngIf="!inThePress" i18n>As featured in</ng-container>
+    <ng-container *ngIf="inThePress" i18n>Minds in the press</ng-container>
   </div>
 
   <ul class="m-grid__column-10">
