--- a/src/app/modules/channels/sidebar-v2/sidebar-v2.component.html
+++ b/src/app/modules/channels/sidebar-v2/sidebar-v2.component.html
@@ -1,12 +1,12 @@
 <div class="m-channelSidebar__buttons">
-  <button class="m-channelSidebar__messageButton" i18n>
+  <button class="m-channelSidebar__messageButton">
     <img [src]="cdnAssetsUrl + 'assets/icons/wire.svg'" />
-    <span>Message</span>
+    <span i18n>Message</span>
   </button>
 
-  <button class="m-channelSidebar__payButton" i18n>
+  <button class="m-channelSidebar__payButton">
     <img [src]="cdnAssetsUrl + 'assets/icons/wire.svg'" />
-    <span>Pay</span>
+    <span i18n>Pay</span>
   </button>
 </div>
 
