--- a/src/app/modules/hashtags/topbar-selector/topbar-selector.component.html
+++ b/src/app/modules/hashtags/topbar-selector/topbar-selector.component.html
@@ -1,10 +1,7 @@
 <m-dropdown *ngIf="showMenu" #dropdown>
   <label>
-    <span
-      class="m-topbar--navigation--item m-topbar--hashtags--hashtag"
-      i18n="@@MINDS__HASHTAGS__TOPBAR__ALL"
-    >
-      #hashtags
+    <span class="m-topbar--navigation--item m-topbar--hashtags--hashtag">
+      <ng-container i18n>#hashtags</ng-container>
       <i class="material-icons">arrow_drop_down</i>
     </span>
   </label>
