--- a/src/app/modules/helpdesk/creator/question/creator.component.html
+++ b/src/app/modules/helpdesk/creator/question/creator.component.html
@@ -34,8 +34,8 @@
         <div class="m-layout__row">
           <div class="m-layout__cell">
             <m-dropdown #dropdown>
-              <label i18n="@@HELPDESK__EDIT__CATEGORIES__TITLE">
-                Select a Category
+              <label>
+                <ng-container i18n>Select a Category</ng-container>
                 <i
                   class="material-icons m-dropdown--label-icon m-dropdown--label-icon-inactive"
                   >keyboard_arrow_down</i
