--- a/src/app/modules/homepage-v2/homepage-v2.component.html
+++ b/src/app/modules/homepage-v2/homepage-v2.component.html
@@ -11,15 +11,16 @@
       <div
         class="m-grid__column-7 m-grid__column-6--tablet m-grid__column-12--mobile m-marketing__body"
       >
-        <h1 class="m-homepage__title" i18n>
-          Minds <span class="m-homepage__yellowLine"></span>
+        <h1 class="m-homepage__title">
+          <ng-container i18n>Minds</ng-container>
+          <span class="m-homepage__yellowLine"></span>
         </h1>
 
-        <h2 ngPreserveWhitespaces i18n>
+        <h2 ngPreserveWhitespaces>
           {{ headline }}
         </h2>
 
-        <p class="m-marketing__description" i18n>
+        <p class="m-marketing__description">
           {{ description }}
         </p>
 
