--- a/src/app/modules/homepage/homepage.component.html
+++ b/src/app/modules/homepage/homepage.component.html
@@ -68,8 +68,6 @@
         >
       </li>
     </ul>
-    <span class="copyright" i18n="@@M__COMMON__COPYRIGHT_YEAR"
-      >&#169; Minds {{ '2020' }}</span
-    >
+    <span class="copyright" i18n>&#169; Minds 2020</span>
   </section>
 </div>
