--- a/src/app/modules/settings-v2/account/autoplay-videos/autoplay-videos.component.html
+++ b/src/app/modules/settings-v2/account/autoplay-videos/autoplay-videos.component.html
@@ -15,8 +15,8 @@
           for="autoplay_videos"
           class="m-form__customInputWrapper__checkbox"
           [ngClass]="{ readonly: !isPlus }"
-          i18n
-          >Enable video autoplay
+        >
+          <ng-container i18n>Enable video autoplay</ng-container>
           <input
             type="checkbox"
             id="autoplay_videos"
