--- a/src/app/modules/settings-v2/account/nsfw-content/nsfw-content.component.html
+++ b/src/app/modules/settings-v2/account/nsfw-content/nsfw-content.component.html
@@ -4,11 +4,8 @@
       <div class="m-form__row--input">
         <div class="m-form__field--checkbox">
           <div class="m-form__row--input">
-            <label
-              for="mature"
-              class="m-form__customInputWrapper__checkbox"
-              i18n
-              >Always show NSFW content (18+)
+            <label for="mature" class="m-form__customInputWrapper__checkbox">
+              <ng-container i18n>Always show NSFW content (18+)</ng-container>
               <input
                 type="checkbox"
                 id="mature"
