--- a/src/app/modules/settings-v2/account/toaster-notifications/toaster-notifications.component.html
+++ b/src/app/modules/settings-v2/account/toaster-notifications/toaster-notifications.component.html
@@ -5,8 +5,8 @@
         <label
           for="toasterNotifications"
           class="m-form__customInputWrapper__checkbox"
-          i18n
-          >Enable notification popovers
+        >
+          <ng-container i18n>Enable notification popovers</ng-container>
           <input
             type="checkbox"
             id="toasterNotifications"
