--- a/src/app/modules/settings-v2/pro/theme/theme.component.html
+++ b/src/app/modules/settings-v2/pro/theme/theme.component.html
@@ -190,9 +190,9 @@
         <label
           for="scheme_light"
           class="m-form__customInputWrapper__radio"
-          i18n
           data-minds="schemeLight"
-          >Light
+        >
+          <ng-container i18n>Light</ng-container>
           <input
             type="radio"
             id="scheme_light"
@@ -206,9 +206,9 @@
         <label
           for="scheme_dark"
           class="m-form__customInputWrapper__radio"
-          i18n
           data-minds="schemeDark"
-          >Dark
+        >
+          <ng-container i18n>Dark</ng-container>
           <input
             type="radio"
             id="scheme_dark"
