--- a/src/app/common/layout/topbar/topbar.component.html
+++ b/src/app/common/layout/topbar/topbar.component.html
@@ -35,12 +35,9 @@
         *ngIf="session.isLoggedIn()"
         (click)="menu.value = false"
       >
-        <a
-          [routerLink]="['/', session.getLoggedInUser().username]"
-          i18n="@@MINDS__TOPBAR__VIEW_CHANNEL"
-        >
+        <a [routerLink]="['/', session.getLoggedInUser().username]">
           <i class="material-icons">people</i>
-          <span>View Channel</span>
+          <span i18n>View Channel</span>
         </a>
       </li>
       <li
@@ -48,9 +45,9 @@
         *ngIf="session.isLoggedIn() && session.isAdmin()"
         (click)="menu.value = false"
       >
-        <a [routerLink]="['/admin/analytics']" i18n="@@MINDS__TOPBAR__ADMIN">
+        <a [routerLink]="['/admin/analytics']">
           <i class="material-icons">build</i>
-          <span>Admin</span>
+          <span i18n>Admin</span>
         </a>
       </li>
       <li
@@ -58,37 +55,31 @@
         *ngIf="session.isLoggedIn()"
         (click)="menu.value = false"
       >
-        <a
-          [routerLink]="['/settings/general']"
-          i18n="@@MINDS__TOPBAR__SETTINGS"
-        >
+        <a [routerLink]="['/settings/general']">
           <i class="material-icons">settings</i>
-          <span>Settings</span>
+          <span i18n>Settings</span>
         </a>
       </li>
       <ng-container *mIfFeature="'helpdesk'; else faq"> </ng-container>
       <ng-template #faq>
         <li class="m-dropdownList__item" (click)="menu.value = false">
-          <a [routerLink]="['/faq']" i18n="@@MINDS__TOPBAR__FAQ">
+          <a [routerLink]="['/faq']">
             <i class="material-icons">help_outline</i>
-            <span>FAQ</span>
+            <span i18n>FAQ</span>
           </a>
         </li>
       </ng-template>
       <li class="m-dropdownList__item" (click)="menu.value = false">
         <ng-container *mIfFeature="'helpdesk'; else helpAndSupport">
-          <a routerLink="/help" i18n="@@MINDS__TOPBAR__HELPDESK">
+          <a routerLink="/help">
             <i class="material-icons">help_outline</i>
-            <span>Help Desk</span>
+            <span i18n>Help Desk</span>
           </a>
         </ng-container>
         <ng-template #helpAndSupport>
-          <a
-            [routerLink]="['/groups/profile/', '100000000000000681']"
-            i18n="@@MINDS__TOPBAR__HS_GROUP"
-          >
+          <a [routerLink]="['/groups/profile/', '100000000000000681']">
             <i class="material-icons">help_outline</i>
-            <span>Help & Support</span>
+            <span i18n>Help & Support</span>
           </a>
         </ng-template>
       </li>
@@ -106,12 +97,12 @@
         *ngIf="session.isLoggedIn()"
         (click)="menu.value = false"
       >
-        <a [routerLink]="['/canary']" i18n="@@MINDS__TOPBAR__MENU__EXPERIMENTS">
+        <a [routerLink]="['/canary']">
           <i class="material-icons">new_releases</i>
-          <span *ngIf="!session.getLoggedInUser().canary"
+          <span *ngIf="!session.getLoggedInUser().canary" i18n
             >Opt-in to Experiments</span
           >
-          <span *ngIf="session.getLoggedInUser().canary">Canary</span>
+          <span *ngIf="session.getLoggedInUser().canary" i18n>Canary</span>
         </a>
       </li>
       <li
@@ -119,9 +110,9 @@
         *ngIf="session.isLoggedIn()"
         (click)="menu.value = false"
       >
-        <a [routerLink]="['/logout']" i18n="@@MINDS__TOPBAR__LOGOUT">
+        <a [routerLink]="['/logout']">
           <i class="material-icons">exit_to_app</i>
-          <span>Logout</span>
+          <span i18n>Logout</span>
         </a>
       </li>
     </ul>
