--- a/src/app/modules/auth/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/forgot-password/forgot-password.component.html
@@ -52,12 +52,9 @@
           </div>
 
           <div class="m-forgot-password--step-2" *ngIf="step == 2">
-            <div
-              class="m-forgot-password__header"
-              i18n="@@MINDS__HOME__FORGOT_PASSWORD__UNLOCK_CODE_SENT"
-            >
-              <h3 class="ng-star-inserted ">Password Reset Email Sent</h3>
-              <span class="m-forgot-password__secondaryText">
+            <div class="m-forgot-password__header">
+              <h3 class="ng-star-inserted" i18n>Password Reset Email Sent</h3>
+              <span class="m-forgot-password__secondaryText" i18n>
                 We have sent an unlock code to your registered email address.
               </span>
             </div>
