--- a/src/app/modules/groups/create/create.html
+++ b/src/app/modules/groups/create/create.html
@@ -99,11 +99,8 @@
           </div>
 
           <div class="m-form__row--input">
-            <label
-              for="type_closed"
-              class="m-form__customInputWrapper__radio"
-              i18n
-              >Closed
+            <label for="type_closed" class="m-form__customInputWrapper__radio">
+              <ng-container i18n>Closed</ng-container>
               <input
                 type="radio"
                 value="0"
@@ -114,11 +111,8 @@
               />
               <span class="m-form__customInput__radio"></span>
             </label>
-            <label
-              for="type_open"
-              class="m-form__customInputWrapper__radio"
-              i18n
-              >Open
+            <label for="type_open" class="m-form__customInputWrapper__radio">
+              <ng-container i18n>Open</ng-container>
               <input
                 type="radio"
                 value="2"
