--- a/src/app/modules/media/view/view.component.html
+++ b/src/app/modules/media/view/view.component.html
@@ -343,10 +343,9 @@
   i18n-yesButton="@@M__COMMON__DELETE_PERMANENTLY"
 >
   <p confirm-message>
-    <ng-container i18n="@@MINDS__MEDIA__CONFIRM_DELETION"
-      >Are you sure you want to delete this?<br /><br />There's no
-      UNDO!</ng-container
-    >
+    <ng-container i18n>Are you sure you want to delete this?</ng-container
+    ><br /><br />
+    <ng-container i18n>There's no UNDO!</ng-container>
   </p>
   <p confirm-success-message>
     <ng-container i18n="@@MINDS__MEDIA__DELETION_CONFIRMATION"
