--- a/src/app/modules/settings-v2/account/share-buttons/share-buttons.component.html
+++ b/src/app/modules/settings-v2/account/share-buttons/share-buttons.component.html
@@ -2,11 +2,8 @@
   <div class="m-form__fieldsContainer">
     <div class="m-form__field--checkbox stretchedField">
       <div class="m-form__row--input">
-        <label
-          for="showButtons"
-          class="m-form__customInputWrapper__checkbox"
-          i18n
-          >Show share buttons
+        <label for="showButtons" class="m-form__customInputWrapper__checkbox">
+          <ng-container>Show share buttons</ng-container>
           <input
             type="checkbox"
             id="showButtons"
