--- a/src/app/modules/settings-v2/pro/payouts/payouts.component.html
+++ b/src/app/modules/settings-v2/pro/payouts/payouts.component.html
@@ -15,8 +15,8 @@
         <label i18n>Payout Currency</label>
       </div>
       <div class="m-form__row--input">
-        <label for="method_usd" class="m-form__customInputWrapper__radio" i18n
-          >USD
+        <label for="method_usd" class="m-form__customInputWrapper__radio" i18n>
+          <ng-container i18n>USD</ng-container>
           <input
             type="radio"
             value="usd"
@@ -31,7 +31,8 @@
           for="method_tokens"
           class="m-form__customInputWrapper__radio"
           i18n
-          >Minds Tokens
+        >
+          <ng-container i18n>Minds Tokens</ng-container>
           <input
             type="radio"
             value="tokens"
@@ -43,8 +44,8 @@
           <span class="m-form__customInput__radio"></span>
         </label>
 
-        <label for="method_eth" class="m-form__customInputWrapper__radio" i18n
-          >Ether
+        <label for="method_eth" class="m-form__customInputWrapper__radio" i18n>
+          <ng-container i18n>Ether</ng-container>
           <input
             type="radio"
             value="eth"
@@ -56,8 +57,8 @@
           <span class="m-form__customInput__radio"></span>
         </label>
 
-        <label for="method_btc" class="m-form__customInputWrapper__radio" i18n
-          >Bitcoin
+        <label for="method_btc" class="m-form__customInputWrapper__radio" i18n>
+          <ng-container i18n>Bitcoin</ng-container>
           <input
             type="radio"
             value="btc"
