--- a/src/app/modules/wallet/tokens/withdraw/ledger/ledger.component.html
+++ b/src/app/modules/wallet/tokens/withdraw/ledger/ledger.component.html
@@ -52,11 +52,8 @@
     </div>
 
     <div class="m-token--ledger--reward-details">
-      <p
-        *ngIf="withdrawal.completed; else withdrawPending"
-        i18n="@@WALLET__TOKENS__WITHDRAW__LEDGER__COMPLETED_LABEL"
-      >
-        COMPLETED |
+      <p *ngIf="withdrawal.completed; else withdrawPending">
+        <ng-container i18n>COMPLETED</ng-container> |
         <a
           class="m-token--ledger--completed-hash"
           target="_blank"
@@ -65,10 +62,7 @@
           {{ withdrawal.completed_tx }}
         </a>
       </p>
-      <ng-template
-        #withdrawPending
-        i18n="@@WALLET__TOKENS__WITHDRAW__LEDGER__PENDING_LABEL"
-      >
+      <ng-template #withdrawPending>
         {{ withdrawal.status.replace('_', ' ') | uppercase }}
       </ng-template>
 
