(fix): Remove nested tags

--- a/src/app/modules/settings-v2/account/email-notifications/email-notifications.component.html
+++ b/src/app/modules/settings-v2/account/email-notifications/email-notifications.component.html
@@ -27,11 +27,7 @@
     </div>
     <div class="m-form__field--checkbox">
       <div class="m-form__row--input">
-        <label
-          for="wire-received"
-          class="m-form__customInputWrapper__checkbox"
-          i18n
-        >
+        <label for="wire-received" class="m-form__customInputWrapper__checkbox">
           <ng-container i18n>I receive a wire</ng-container>
           <input
             type="checkbox"
@@ -71,11 +67,7 @@
     <div class="m-settingsV2__subheader">Email me with</div>
     <div class="m-form__field--checkbox">
       <div class="m-form__row--input">
-        <label
-          for="top-posts"
-          class="m-form__customInputWrapper__checkbox"
-          i18n
-        >
+        <label for="top-posts" class="m-form__customInputWrapper__checkbox">
           <ng-container i18n>Top posts from my network</ng-container>
           <input
             type="checkbox"
