--- a/src/app/modules/settings-v2/pro/payouts/payouts.component.html
+++ b/src/app/modules/settings-v2/pro/payouts/payouts.component.html
@@ -15,7 +15,7 @@
         <label i18n>Payout Currency</label>
       </div>
       <div class="m-form__row--input">
-        <label for="method_usd" class="m-form__customInputWrapper__radio" i18n>
+        <label for="method_usd" class="m-form__customInputWrapper__radio">
           <ng-container i18n>USD</ng-container>
           <input
             type="radio"
@@ -27,11 +27,7 @@
           />
           <span class="m-form__customInput__radio"></span>
         </label>
-        <label
-          for="method_tokens"
-          class="m-form__customInputWrapper__radio"
-          i18n
-        >
+        <label for="method_tokens" class="m-form__customInputWrapper__radio">
           <ng-container i18n>Minds Tokens</ng-container>
           <input
             type="radio"
@@ -44,7 +40,7 @@
           <span class="m-form__customInput__radio"></span>
         </label>
 
-        <label for="method_eth" class="m-form__customInputWrapper__radio" i18n>
+        <label for="method_eth" class="m-form__customInputWrapper__radio">
           <ng-container i18n>Ether</ng-container>
           <input
             type="radio"
@@ -57,7 +53,7 @@
           <span class="m-form__customInput__radio"></span>
         </label>
 
-        <label for="method_btc" class="m-form__customInputWrapper__radio" i18n>
+        <label for="method_btc" class="m-form__customInputWrapper__radio">
           <ng-container i18n>Bitcoin</ng-container>
           <input
             type="radio"
